--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,8 @@
    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
    "configurations": [
+       
+   
         {
             "name": ".NET Core Launch (console)",
             "type": "coreclr",
@@ -14,7 +16,7 @@
             "args": [],
             "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
-            "console": "IntegratedTerminal",
+            "console": "integratedTerminal",
             "stopAtEntry": false
         },
         {
